# productivity

./: .gitignore  README.md  llm_cache.json  overrides.json  profiles.json  pyproject.toml
final_project/: __main__.py
final_project/core/: engine.py  state.py
final_project/llm/: classifier.py  client.py
final_project/monitors/: input.py  window.py
final_project/ui/: main_window.py  orbital_switcher.py
src/productivity/: __main__.py
src/productivity/core/: config.py  engine.py  logger.py  overrides.py  profile.py  state.py
src/productivity/llm/: classifier.py  client.py
src/productivity/monitors/: base.py  input.py  window.py
src/productivity/ui/: main_window.py  orbital_switcher.py
