[project]
name = "productivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygetwindow>=0.0.9",
    "pyobjc-framework-Quartz>=10.2; sys_platform == 'darwin'",
    "pynput>=1.7.6",
    "httpx>=0.27.0",
    "pyside6>=6.7.0",
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "psutil>=5.9.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
productivity = "productivity.__main__:main"